change author name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="clearfix"></div>
         <div class="author-post">
             <img src="photo.jpg" />
-            <p class="author">Iva Karaivanska</p>
+            <p class="author">Iva K</p>
             <a href="#">See the profile</a>
         </div>
     </div>
